Added languages string, redirect option etc

--- a/components/com_contactus/models/forms/contactus.xml
+++ b/components/com_contactus/models/forms/contactus.xml
@@ -2,7 +2,7 @@
 <form 
   addrulepath="components/com_contactus/models/rules">
   <fieldset 
-    name="register" 
+    name="contactus" 
     label="">
     
     <field 
